macros/tests/ui/not_function.stderr
error: expected `fn`
 --> tests/ui/not_function.rs:4:1
  |
4 | struct Point {
  | ^^^^^^
